updated all packages issue : (may be fixed) - Output not visible after waking up from sleep. - Previous output logs get cleared when logs are in large amount.

--- a/css/xterm.css
+++ b/css/xterm.css
@@ -36,6 +36,7 @@
  */
 
  .xterm {
+    cursor: text;
     position: relative;
     user-select: none;
     -ms-user-select: none;
@@ -59,7 +60,7 @@
 
 .xterm .xterm-helper-textarea {
     padding: 0;
-    border: 0;
+    border: 5px solid var(--bs-dark);
     margin: 0;
     /* Move textarea out of the screen to the far left, so that the cursor is not visible */
     position: absolute;
@@ -103,6 +104,7 @@
 
 .xterm .xterm-screen {
     position: relative;
+    border-left: 5px solid var(--bs-dark);
 }
 
 .xterm .xterm-screen canvas {
@@ -122,11 +124,6 @@
     top: 0;
     left: -9999em;
     line-height: normal;
-}
-
-.xterm {
-    cursor: text;
-    border-left: solid 4px var(--bs-dark);
 }
 
 .xterm.enable-mouse-events {
@@ -153,6 +150,7 @@
     right: 0;
     z-index: 10;
     color: transparent;
+    pointer-events: none;
 }
 
 .xterm .live-region {
@@ -164,13 +162,49 @@
 }
 
 .xterm-dim {
-    opacity: 0.5;
+    /* Dim should not apply to background, so the opacity of the foreground color is applied
+     * explicitly in the generated class and reset to 1 here */
+    opacity: 1 !important;
 }
 
-.xterm-underline {
-    text-decoration: underline;
+.xterm-underline-1 { text-decoration: underline; }
+.xterm-underline-2 { text-decoration: double underline; }
+.xterm-underline-3 { text-decoration: wavy underline; }
+.xterm-underline-4 { text-decoration: dotted underline; }
+.xterm-underline-5 { text-decoration: dashed underline; }
+
+.xterm-overline {
+    text-decoration: overline;
 }
+
+.xterm-overline.xterm-underline-1 { text-decoration: overline underline; }
+.xterm-overline.xterm-underline-2 { text-decoration: overline double underline; }
+.xterm-overline.xterm-underline-3 { text-decoration: overline wavy underline; }
+.xterm-overline.xterm-underline-4 { text-decoration: overline dotted underline; }
+.xterm-overline.xterm-underline-5 { text-decoration: overline dashed underline; }
 
 .xterm-strikethrough {
     text-decoration: line-through;
+}
+
+.xterm-screen .xterm-decoration-container .xterm-decoration {
+	z-index: 6;
+	position: absolute;
+}
+
+.xterm-screen .xterm-decoration-container .xterm-decoration.xterm-decoration-top-layer {
+	z-index: 7;
+}
+
+.xterm-decoration-overview-ruler {
+    z-index: 8;
+    position: absolute;
+    top: 0;
+    right: 0;
+    pointer-events: none;
+}
+
+.xterm-decoration-top {
+    z-index: 2;
+    position: relative;
 }
